既読・お気に入り管理を追加
